# Hayyan_Splunk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION.md  QUICKSTART.md  README.md  docker-compose.misp.yml  docker-compose.splunk.yml  main.py  pyproject.toml  requirements.txt  run.ps1  setup.ps1
data/: misp_ioc_lookup.csv
docs/architecture/: phases.md
docs/final/: API_KEY_ROTATION_STEP.md  DEMO_SCRIPT_3_MIN.md  FINAL_CORRECTED_DOCS.md  IOC_DATA_FLOW_ONE_PAGER.md  READINESS_CHECKLIST.md  TASK2_OPERATIONAL_READINESS.md
docs/setup/: MISP_SETUP.md  ROCKY_SCANNER_SETUP.md
scripts/: _rocky_env.py  deploy_rocky.py  fix_deps.py  harden_rocky.py  install_rocky_deps.py  list_tmp.py  misp_setup.sh  misp_sync_splunk.py  noise_generator.py  run.sh  run_api.sh  setup.sh  test_scanners.py  update_hec.py  validate_splunk.py  verify_setup.py
scripts/rocky/: normalize.py  nuclei-web.sh  orchestrator.sh  push_misp.py  push_splunk.py  rogue_scan_sim.sh  targets.yaml  trivy-fs.sh
scripts/rocky-scanner/: DEPLOY.md  orchestrator.sh
soc_agents/agents/: soc_graph.py
soc_agents/api/: app.py
soc_agents/core/: config.py  models.py  splunk_client.py
soc_agents/knowledge/: __init__.py  build_kb.py
soc_agents/tools/: __init__.py  audit_tools.py  misp_tools.py  spl_guardrails.py  splunk_tools.py
splunk_config/: indexes.conf  inputs.conf  misp_savedsearches.conf  risk_adjusted_alerts.conf  savedsearches.conf  threat_dashboard.xml
systemd/: hayyan-scan.service  hayyan-scan.timer
tests/: __init__.py  test_spl_guardrails.py  test_splunk_client.py
(+13 files in other folders)
