[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hayyan-soc-agents"
version = "1.0.0"
description = "Enterprise LangGraph SOC AI agents connected to Splunk"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 100
