[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hayyan-soc-agents"
version = "2.0.0"
description = "Autonomous AI SOC analyst powered by LangGraph and Gemini"
authors = [{name = "Mahmoud", email = "mahmoudmallabadis@gmail.com"}]
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
